--- a/database-ci.yml
+++ b/database-ci.yml
@@ -2,12 +2,12 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   collation: utf8mb4_unicode_ci
-  host: mysql_test
+  host: mysql-test
   port: 3306
   pool: 5
 
 test:
   <<: *default
-  database: db_test
-  username: user_test
-  password: password_test
+  database: db-test
+  username: user-test
+  password: password-test
