--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@
 /config/master.key
 /config/database.yml
 /test/*
+
+.idea
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
