--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,3 +5,7 @@ digits:
   length_255: 255
 email:
   regex: !ruby/regexp '/\A[\w+-.]+@[a-z\d-]+(.[a-z\d-]+)*.[a-z]+\z/i'
+date:
+  format: "%d/%m/%Y"
+pagy:
+  number_items: 8
