--- a/config/settings.yml
+++ b/config/settings.yml
@@ -8,6 +8,7 @@ email:
 date:
   format: "%d/%m/%Y"
   format_date_field: "%Y-%m-%d"
+  format_month_field: "%Y-%m"
 pagy:
   number_items: 8
   number_items_10: 10
