Statistics project values resources

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -509,6 +509,10 @@ Style/WordArray:
 Lint/AssignmentInCondition:
   AllowSafeAssignment: true
 
+Lint/MissingSuper:
+  Exclude:
+    - app/services/**/*
+
 # Align ends correctly.
 Layout/EndAlignment:
   # The value `keyword` means that `end` should be aligned with the matching
