Create lesson learn db, seed and model

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -8,6 +8,7 @@ digits:
   length_255: 255
   length_200: 200
   length_1000: 1000
+  length_3000: 3000
 email:
   regex: !ruby/regexp '/\A[\w+-.]+@[a-z\d-]+(.[a-z\d-]+)*.[a-z]+\z/i'
 date:
