--- a/config/settings.yml
+++ b/config/settings.yml
@@ -19,6 +19,7 @@ pagy:
   number_items_10: 10
   number_items_20: 20
 project:
+  max_length_100: 100
   max_length_200: 200
   max_length_1000: 1000
 user_roles:
