send message slack when project release

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+SLACK_API_TOKEN=
 PROJECT_MANAGEMENT_DATABASE_USER=root
 PROJECT_MANAGEMENT_DATABASE_PASSWORD=1
 PROJECT_MANAGEMENT_DATABASE_NAME=project_management_development
